<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PlaceSaver</string>
    <string name="title">PlaceSaver</string>
    <string name="button_old">Manage Current Reminders</string>
    <string name="button_new">Create New Reminder</string>
    <string name="button_help">Help</string>
    <string name="button_about">About</string>
    <string name="oldRemindersText">There\'s nothing here yet.  But if you had reminders there would be.</string>
    <string name="newReminderText">This is a map, and you select places to put reminders.</string>
    <string name="helpText">Nobody can help you now!</string>
    <string name="aboutText">To find out more about this app, write your question on the back of a $20 bill and mail it to 11904 Carlton Rd.</string>
    <string name="nothingText">41.346628,-74.001675</string>
    <string name="doNothing">Coordinates of Secret Treasure</string>
    <string name="doNothing_shortcut">Coords</string>
    <string name="opt_language">Language</string>
    <string name="opt_choose_language">Select Your Language</string>
    <string-array name="opt_language_list">
        <item>English</item>
        <item>U.K. English</item>
        <item>German</item>
        <item>Norwegian</item>
        <item>PIC Assembly</item>
        <item>African Clicking Language</item>
    </string-array>
    <string name="optionsTitle">Options</string>
    <string name="button_map">Anything Involving Google Maps</string>
    
    
</resources>